<resources>
    <string name="app_name">MySociety</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_delete_all">DELETE ALL</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login</string>

    <string name="admin_first_name">Vadym</string>
    <string name="admin_last_name">Lytvynenko</string>
    <string name="admin_date_of_birth">04 Jan 1994</string>
    <string name="admin_info">
    <![CDATA[
        I \'m passionate all about android development. Algorithms
        , pretty designs, polished products that\'s that\'s my point of view. Fast learner
        and clean coder that\s all about me. I\'m always focus on a skills improvement and self-development.
         Thank you for your attention. Now please tap <font color="#00000">%1$s</font> times on my photo.
    ]]>
    </string>
    <string name="about_me">About me</string>
    <string name="no_contacts_available">No contacts</string>
    <string name="please_login">Please login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_error_message">Invalid login or password</string>
    <string name="dialog_last_name">Last name</string>
    <string name="dialog_first_name">First name</string>
    <string name="dialog_phone_num">Phone</string>
    <string name="remember_me">Remember me</string>
    <string name="should_have_phone">Contact should have a phone number</string>
    <string name="fill_this_line">Fill this line</string>
    <string name="create">Create</string>
    <string name="done">done</string>
    <string name="action_add">Add contact</string>
    <string name="rationale_calls">This permission will allow you to make phone calls by one tap, if you deny this permission - you will only be able to make speed dials</string>
    <string name="action_settings">Settings</string>
    <string name="access_permission">You need permission for this</string>
    <string name="rationale_photo">This permission will allow you to assign contact photo taken by camera</string>
    <string name="rationale_gallery">This permission will allow you to assign contact a picture from your gallery</string>
    <string name="message_delete">Delete %1$s from your contacts?</string>
    <string name="message_delete_all">Delete all contacts?</string>
    <string name="no_contacts_have">You have no contacts</string>
    <string name="back_again">Click BACK again to exit</string>
    <string name="contacts">Contacts</string>
    <string name="log_out">Log out</string>
    <string name="made">Made</string>
    <string name="with">with</string>
    <string name="by">by</string>
    <string name="mrvadi">MrVadi</string>
    <string name="return_back">return back</string>
    <string name="name">Name</string>
    <string name="action_call">call</string>
    <string name="action_edit">edit</string>
    <string name="action_delete">delete</string>
</resources>
