<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_splash"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:src="@drawable/ic_contact_phone_white_48dp" />

    <TextView
        android:id="@+id/splash_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/please_login"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_login_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/splash_greeting">

        <EditText
            android:id="@+id/edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height_splash"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_login"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:passwordToggleEnabled="false"
        android:layout_below="@+id/edit_text_login_wrapper">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height_splash"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/splash_login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height_splash"
        android:layout_below="@+id/edit_text_password_wrapper"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/hint_login"
        android:visibility="gone"
        android:textColor="@android:color/white"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:id="@+id/splash_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_error_message"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/splash_login_btn"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        />

    <ImageView
        android:id="@+id/splash_error_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_error_message"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:tint="@android:color/holo_red_light"
        android:src="@drawable/ic_error"
        />

    <ImageView
        android:id="@+id/splash_logo_logined"
        android:layout_width="@dimen/normal_splash_logo_size"
        android:layout_height="@dimen/normal_splash_logo_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:src="@drawable/ic_contact_phone_white_48dp" />

    <TextView
        android:id="@+id/text_splash_hello_logined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:text="@string/please_login"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textSize="40sp" />


</RelativeLayout>